Working on header styling

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,3 +1,10 @@
+<% if logged_in? %>
+  <script id="bootstrap-current-user" type="text/javascript">
+  	window.currentUser = <%= render("api/users/bootstrap.json.jbuilder",
+                                   user: current_user).html_safe %>
+  </script>
+<% end %>
+
 <div id='root'>
 
 </div>
