--- a/app/assets/stylesheets/03_header.scss
+++ b/app/assets/stylesheets/03_header.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  align-items: center;
 }
 
 .splash-logo {
@@ -19,5 +20,28 @@
 
   &:hover {
     fill: rgb(81, 130, 238);
+  }
+}
+
+.login-signup{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  
+  a{
+    padding: 15px;
+    text-align: center;
+    font-weight: bold;
+
+    &:hover{
+      color: rgb(81, 130, 238);
+    }
+  }
+
+  a[signup]{
+    height: 100%;
+    border: 3px solid black;
+    border-radius: 50px;
   }
 }
