--- a/app/assets/stylesheets/01_reset.scss
+++ b/app/assets/stylesheets/01_reset.scss
@@ -32,6 +32,11 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
+input{
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
 ol, ul {
 	list-style: none;
 }
