--- a/app/assets/stylesheets/02_app.scss
+++ b/app/assets/stylesheets/02_app.scss
@@ -9,3 +9,10 @@ a:visited{
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+#app{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
