--- a/app/assets/stylesheets/03_header.scss
+++ b/app/assets/stylesheets/03_header.scss
@@ -1,7 +1,7 @@
 .header {
   height: 10vh;
   width: 100vw;
-  padding: 4% 1% 0 1%;
+  padding: 5px 1% 0 1%;
   text-align: center;
   display: flex;
   flex-direction: row;
@@ -20,28 +20,5 @@
 
   &:hover {
     fill: rgb(81, 130, 238);
-  }
-}
-
-.login-signup{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  
-  a{
-    padding: 15px;
-    text-align: center;
-    font-weight: bold;
-
-    &:hover{
-      color: rgb(81, 130, 238);
-    }
-  }
-
-  a[signup]{
-    height: 100%;
-    border: 3px solid black;
-    border-radius: 50px;
   }
 }
