--- a/app/assets/stylesheets/03_header.scss
+++ b/app/assets/stylesheets/03_header.scss
@@ -7,15 +7,20 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  z-index: 1;
+
+  -webkit-box-shadow: 0px -4px 6px 0px black;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+  -moz-box-shadow:    0px -4px 6px 0px black;  /* Firefox 3.5 - 3.6 */
+  box-shadow:         0px -4px 6px 0px black; 
 }
 
 .splash-logo {
-  min-height: 40%;
+  min-height: 35%;
   width: 10%;
 }
 
 #logo_svg {
-  width: 100%;
+  // width: 100%;
   height: 100%;
 
   &:hover {
