--- a/app/assets/stylesheets/05_session_form.scss
+++ b/app/assets/stylesheets/05_session_form.scss
@@ -9,11 +9,20 @@
 
 
 .session-form {
-  margin-top: 150px;
+  margin-top: 75px;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 350px;
+  background-color: white;
+  border: 0.5px solid rgba(0, 0, 0, 0.2);
+  height: 70%;
+
+  & > h2{
+    font-size: 25px;
+    font-weight: 100;
+    margin: 30px 0;
+  }
 
   button {
     color: white;
@@ -31,6 +40,7 @@
     }
   }
 }
+
 
 .session-form-input {
   width: 80%;
