--- a/app/assets/stylesheets/03_header.scss
+++ b/app/assets/stylesheets/03_header.scss
@@ -1,4 +1,6 @@
 .header {
+  position: fixed;
+  top: 0;
   height: 10vh;
   width: 100vw;
   padding: 5px 1% 0 1%;
@@ -8,6 +10,7 @@
   justify-content: space-around;
   align-items: center;
   z-index: 1;
+  background-color: white;
 
   -webkit-box-shadow: 0px -4px 6px 0px black;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
   -moz-box-shadow:    0px -4px 6px 0px black;  /* Firefox 3.5 - 3.6 */
