Working on styling image/imageHover components

--- a/app/assets/stylesheets/07_feed.scss
+++ b/app/assets/stylesheets/07_feed.scss
@@ -1,5 +1,6 @@
 .feed-container{
   width: 90%;
-  padding: 10px 20px 0 20px;
+  padding: 0 20px 0 20px;
+  margin-top: 10vh;
   overflow: hidden;
 }
