--- a/app/assets/stylesheets/08_image.scss
+++ b/app/assets/stylesheets/08_image.scss
@@ -1,8 +1,34 @@
 .image-container{
-  
+  position: relative;
+
   img{
     width: 100%;
     display:block;
     margin:auto;
   }
 }
+
+.image-hover{
+  position: absolute;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+
+  .image-hover-top{
+    padding-top: 10px;
+    padding-left: 10px;
+  }
+
+  .image-hover-bottom{
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
