--- a/app/assets/stylesheets/08_image.scss
+++ b/app/assets/stylesheets/08_image.scss
@@ -1,28 +1,48 @@
-.image-container{
+.image-container {
   position: relative;
 
-  img{
+  &:hover {
+    .shadow {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      box-shadow: 0 0 1500px 2px rgba(0, 0, 0, 1) inset;
+      top: 0;
+      left: 0;
+    }
+
+    .image-hover {
+      display: flex;
+    }
+  }
+
+  img {
     width: 100%;
-    display:block;
-    margin:auto;
+    display: block;
+    z-index: -1;
+    margin: auto;
   }
 }
 
-.image-hover{
+.image-hover {
+  display: none;
   position: absolute;
   top: 0;
-  display: flex;
+  // display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
   width: 100%;
+  background-color: transparent;
+  z-index: 3;
+  color: rgba(255, 255, 255, 0.7);
 
-  .image-hover-top{
+  .image-hover-top {
     padding-top: 10px;
     padding-left: 10px;
   }
 
-  .image-hover-bottom{
+  .image-hover-bottom {
     padding-bottom: 10px;
     padding-left: 10px;
     padding-right: 10px;
@@ -31,4 +51,3 @@
     justify-content: space-between;
   }
 }
-
