Added react-responsive-masonry for use in the feed component

--- a/app/assets/stylesheets/08_image.scss
+++ b/app/assets/stylesheets/08_image.scss
@@ -18,9 +18,9 @@
 
   img {
     width: 100%;
-    display: block;
-    z-index: -1;
-    margin: auto;
+    // height: 100%;
+    // display: block;
+    // margin: auto;
   }
 }
 
