Gave simple styling to login/signup errors

--- a/app/assets/stylesheets/06_user_info.scss
+++ b/app/assets/stylesheets/06_user_info.scss
@@ -24,12 +24,12 @@
 .user-info-drowpdown{
   position: absolute;
   top: 80px;
-  right: 185px;
+  right: 200px;
   width: 150px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  // padding: 30px;
+  background-color: white;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 8px;
 
