--- a/app/assets/stylesheets/05_session_form.scss
+++ b/app/assets/stylesheets/05_session_form.scss
@@ -3,8 +3,9 @@
   height: 100vh;
   background-color: rgb(247, 248, 250);
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  // align-items: center;
+  align-items: center;
 }
 
 
@@ -51,4 +52,8 @@
     width: 100%;
     height: 35px;
   }
+}
+
+.session-form-errors{
+  padding: 10px 0;
 }
