--- a/app/assets/stylesheets/09_masonry.scss
+++ b/app/assets/stylesheets/09_masonry.scss
@@ -4,6 +4,8 @@
   display: flex;
   margin-left: -30px; /* gutter size offset */
   width: auto;
+  margin-top: 10vh;
+  padding: 10px
 }
 .my-masonry-grid_column {
   padding-left: 30px; /* gutter size */
