Working on post feature

--- a/app/assets/stylesheets/04_login_signup.scss
+++ b/app/assets/stylesheets/04_login_signup.scss
@@ -1,23 +1,24 @@
-.login-signup{
+.login-signup {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  
-  a{
+  font-size: 16px;
+  font-weight: 800;
+
+  a {
     padding: 10px;
     text-align: center;
-    font-weight: bold;
     width: 100px;
 
-    &:hover{
+    &:hover {
       color: rgb(81, 130, 238);
     }
   }
+}
 
-  a[signup]{
-    height: 100%;
-    border: 3px solid black;
-    border-radius: 50px;
-  }
+.signup-link {
+  height: 100%;
+  border: 3px solid black;
+  border-radius: 50px;
 }
