--- a/app/assets/stylesheets/06_user_info.scss
+++ b/app/assets/stylesheets/06_user_info.scss
@@ -43,3 +43,19 @@
   }
 }
 
+.user-info-upload{
+
+}
+
+.upload-button{
+  text-align: center;
+  font-size: 16px;
+  font-weight: 800;
+  width: 100px;
+  background-color: transparent;
+  padding: 10px;
+  height: 100%;
+  border: 2px solid black;
+  border-radius: 50px;
+}
+
