Created demo login

--- a/app/assets/stylesheets/05_session_form.scss
+++ b/app/assets/stylesheets/05_session_form.scss
@@ -8,7 +8,6 @@
   align-items: center;
 }
 
-
 .session-form {
   margin-top: 75px;
   display: flex;
@@ -31,6 +30,7 @@
     font-weight: bold;
     background-color: rgb(8, 112, 209);
     padding: 15px;
+    margin: 20px 0;
     width: 80%;
     border-radius: 30px;
     border-color: rgb(8, 112, 209);
