--- a/app/assets/stylesheets/11_post_form.scss
+++ b/app/assets/stylesheets/11_post_form.scss
@@ -1,3 +1,46 @@
-.post-form{
+.post-form {
   margin-top: 10vh;
+  padding: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
+  height: 650px;
+
+  form {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid gray;
+    padding: 10px 20px;
+    height: 100%;
+    width: 25%;
+
+    & > h3{
+      margin: 20px 0;
+      text-align: center;
+    }
+
+    & > input,
+    textarea {
+      margin-bottom: 20px;
+    }
+  }
+}
+
+.post-form-preview {
+  width: 70%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  // padding: 10px;
+
+  img {
+    width: 100%;
+    object-fit: contain;
+  }
+}
+
+.visible{
+  border: 1px solid blue;
 }
