Setup feed and post show description

--- a/app/assets/stylesheets/12_post_show.scss
+++ b/app/assets/stylesheets/12_post_show.scss
@@ -21,6 +21,13 @@
   }
 
   .post-show-description{
+    padding: 25px;
     width: 90%;
+
+    h3{
+      font-size: 20px;
+      font-weight: 400;
+      margin-bottom: 10px;
+    }
   }
 }
