--- a/app/assets/stylesheets/03_header.scss
+++ b/app/assets/stylesheets/03_header.scss
@@ -1,7 +1,7 @@
 .header {
   position: fixed;
   top: 0;
-  height: 10vh;
+  height: 80px;
   width: 100vw;
   padding: 5px 1% 0 1%;
   text-align: center;
