Fixed extra space on Image component

--- a/app/assets/stylesheets/03_header.scss
+++ b/app/assets/stylesheets/03_header.scss
@@ -1,7 +1,9 @@
+@import './00_variables.scss';
+
 .header {
   position: fixed;
   top: 0;
-  height: 80px;
+  height: $header-height;
   width: 100vw;
   padding: 5px 1% 0 1%;
   text-align: center;
