--- a/app/assets/stylesheets/07_feed.scss
+++ b/app/assets/stylesheets/07_feed.scss
@@ -1,6 +1,8 @@
+@import './00_variables.scss';
+
 .feed-container{
   width: 90%;
   padding: 0 20px 0 20px;
-  margin-top: 10vh;
+  margin-top: $header-height;
   overflow: hidden;
 }
