--- a/app/assets/stylesheets/08_image.scss
+++ b/app/assets/stylesheets/08_image.scss
@@ -1,5 +1,13 @@
+$border-radius: 4px;
+
 .image-container {
   position: relative;
+  display: flex;
+  margin: 2px;
+
+  a{
+    line-height: 0;
+  }
 
   &:hover {
     .shadow {
@@ -18,9 +26,8 @@
 
   img {
     width: 100%;
-    height: 100%;
-    // display: block;
-    // margin: auto;
+    height: auto;
+    border-radius: $border-radius;
   }
 }
 
@@ -28,6 +35,7 @@
   display: none;
   position: absolute;
   top: 0;
+  // commented out because hover functionality will display the hover
   // display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -36,9 +44,10 @@
   background-color: transparent;
   z-index: 1;
   color: rgba(255, 255, 255, 0.7);
+  border-radius: $border-radius;
 
   .image-hover-top {
-    padding-top: 10px;
+    padding-top: 14px;
     padding-left: 10px;
   }
 
@@ -49,5 +58,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
   }
 }
