--- a/app/assets/stylesheets/12_post_show.scss
+++ b/app/assets/stylesheets/12_post_show.scss
@@ -1,5 +1,7 @@
+@import './00_variables.scss';
+
 .post-show {
-  margin-top: 10vh;
+  margin-top: $header-height;
   width: 100%;
   height: 100%;
   display: flex;
@@ -12,10 +14,13 @@
     width: 100%;
     height: 450px;
     background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 
   img {
-    width: 100%;
+    // width: 100%;
     height: 100%;
     object-fit: contain;
   }
@@ -29,5 +34,19 @@
       font-weight: 400;
       margin-bottom: 10px;
     }
+  }
+}
+
+
+.post-show-navigation{
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+
+  .arrow{
+    display: inline-block;
+    width: 50%;
+    height: 200px;
   }
 }
