--- a/app/assets/stylesheets/08_image.scss
+++ b/app/assets/stylesheets/08_image.scss
@@ -15,6 +15,7 @@ $border-radius: 4px;
       width: 100%;
       height: 100%;
       box-shadow: 0 0 1500px 2px rgba(0, 0, 0, 1) inset;
+      border-radius: $border-radius;
       top: 0;
       left: 0;
     }
