--- a/app/assets/stylesheets/10_user_profile.scss
+++ b/app/assets/stylesheets/10_user_profile.scss
@@ -5,13 +5,29 @@
   width: 100vw;
   height: 90vh;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.user-profile-picture {
-  img {
-    object-fit:cover;
-    object-position: center;
-    width: 100px;
-    height: 100px;
+.profile-picture{
+  width: 80px;
+  height: 80px;
+
+  img{
+    width: 100%;
+    height: 100%;
   }
+
+  .profile-picture-edit{
+    display: none;
+  }
+
+  &:hover .profile-picture-edit{
+    display: block;
+    position: relative;
+    top: -30px;
+    background-color: ;
+  }
+
 }
