--- a/app/assets/stylesheets/10_user_profile.scss
+++ b/app/assets/stylesheets/10_user_profile.scss
@@ -1,4 +1,4 @@
-@import './00_variables.scss';
+@import "./00_variables.scss";
 
 .user-profile {
   margin-top: $header-height;
@@ -10,24 +10,41 @@
   align-items: center;
 }
 
-.profile-picture{
+.profile-picture {
+  width: 90px;
+  height: 90px;
+  background-color: blue;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-picture-buffer {
   width: 80px;
   height: 80px;
+  overflow: hidden;
+  border-radius: 50%;
 
-  img{
+  img {
     width: 100%;
     height: 100%;
   }
-
-  .profile-picture-edit{
-    display: none;
-  }
-
-  &:hover .profile-picture-edit{
-    display: block;
-    position: relative;
-    top: -30px;
-    background-color: ;
-  }
-
 }
+
+// .profile-picture{
+
+//   overflow: hidden;
+
+//   .profile-picture-edit{
+//     display: none;
+//   }
+
+//   &:hover .profile-picture-edit{
+//     display: block;
+//     position: relative;
+//     top: -30px;
+//     // background-color: ;
+//   }
+
+// }
