Restyled header and feed

--- a/app/assets/stylesheets/03_header.scss
+++ b/app/assets/stylesheets/03_header.scss
@@ -4,19 +4,24 @@
   position: fixed;
   top: 0;
   height: $header-height;
-  width: 100vw;
-  padding: 5px 1% 0 1%;
+  width: 95%;
+  margin: 0 auto;
+  // padding: 5px 1% 0 1%;
   text-align: center;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   z-index: 3;
   background-color: white;
 
-  -webkit-box-shadow: 0px -4px 6px 0px black;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
-  -moz-box-shadow:    0px -4px 6px 0px black;  /* Firefox 3.5 - 3.6 */
-  box-shadow:         0px -4px 6px 0px black; 
+  & *:first-child{
+    margin-left: 2.5%;
+  }
+
+  & *:last-child{
+    margin-right: 2.5%;
+  }
 }
 
 .splash-logo {
