--- a/app/assets/stylesheets/07_feed.scss
+++ b/app/assets/stylesheets/07_feed.scss
@@ -1,8 +1,12 @@
-@import './00_variables.scss';
+@import "./00_variables.scss";
 
-.feed-container{
-  width: 90%;
+.feed-container {
+  width: 100%;
   padding: 0 20px 0 20px;
   margin-top: $header-height;
   overflow: hidden;
+  background-color: rgb(247, 248, 250);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
