--- a/app/assets/stylesheets/09_masonry.scss
+++ b/app/assets/stylesheets/09_masonry.scss
@@ -2,8 +2,9 @@
   display: -webkit-box; /* Not needed if autoprefixing */
   display: -ms-flexbox; /* Not needed if autoprefixing */
   display: flex;
-  margin-left: -30px; /* gutter size offset */
-  width: auto;
+  margin: 0 auto;
+  // margin-left: -30px; /* gutter size offset */
+  width: 95%;
   padding: 10px
 }
 .my-masonry-grid_column {
