--- a/app/assets/stylesheets/10_user_profile.scss
+++ b/app/assets/stylesheets/10_user_profile.scss
@@ -4,6 +4,7 @@
   margin-top: $header-height;
   width: 100vw;
   height: 90vh;
+  padding: 5px 1% 0 1%;
   text-align: center;
   display: flex;
   flex-direction: column;
