--- a/app/assets/stylesheets/03_header.scss
+++ b/app/assets/stylesheets/03_header.scss
@@ -4,9 +4,9 @@
   position: fixed;
   top: 0;
   height: $header-height;
-  width: 95%;
-  margin: 0 auto;
-  // padding: 5px 1% 0 1%;
+  width: 100%;
+  margin: 0 auto $header-height auto;
+  padding: 5px 1% 0 1%;
   text-align: center;
   display: flex;
   flex-direction: row;
