--- a/app/assets/stylesheets/07_feed.scss
+++ b/app/assets/stylesheets/07_feed.scss
@@ -2,11 +2,12 @@
 
 .feed-container {
   width: 100%;
+  height: 75vh;
   padding: 0 20px 0 20px;
-  margin-top: $header-height;
-  overflow: hidden;
+  // margin-top: $header-height;
+  // overflow: hidden;
   background-color: rgb(247, 248, 250);
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
 }
