--- a/app/assets/stylesheets/09_masonry.scss
+++ b/app/assets/stylesheets/09_masonry.scss
@@ -5,7 +5,7 @@
   margin: 0 auto;
   // margin-left: -30px; /* gutter size offset */
   width: 95%;
-  padding: 10px
+  // padding: 10px
 }
 .my-masonry-grid_column {
   padding-left: 30px; /* gutter size */
