--- a/app/assets/stylesheets/10_user_profile.scss
+++ b/app/assets/stylesheets/10_user_profile.scss
@@ -33,19 +33,34 @@
   }
 }
 
-// .profile-picture{
+.follow-button{
+  border-style: solid;
+  border-width: 2px;
+}
 
-//   overflow: hidden;
+.follow{
+  background-color: blue;
 
-//   .profile-picture-edit{
-//     display: none;
-//   }
+  &::after{
+    content: "Follow";
+  }
 
-//   &:hover .profile-picture-edit{
-//     display: block;
-//     position: relative;
-//     top: -30px;
-//     // background-color: ;
-//   }
+  &:hover{
+    background-color: lighten($color: blue, $amount: 10%);
+  }
+}
 
-// }
+.following{
+
+
+  &::after{
+    content: "Follwing";
+    color: grey;
+  }
+
+  &:hover::after{
+    content: "Unfollow";
+    color: red;
+    border-color: red;
+  }
+}
