--- a/app/assets/stylesheets/10_user_profile.scss
+++ b/app/assets/stylesheets/10_user_profile.scss
@@ -39,6 +39,7 @@
 }
 
 .follow{
+
   background-color: blue;
 
   &::after{
@@ -51,7 +52,7 @@
 }
 
 .following{
-
+  background-color: transparent;
 
   &::after{
     content: "Follwing";
@@ -61,6 +62,7 @@
   &:hover::after{
     content: "Unfollow";
     color: red;
+    background-color: grey;
     border-color: red;
   }
 }
