--- a/app/assets/stylesheets/10_user_profile.scss
+++ b/app/assets/stylesheets/10_user_profile.scss
@@ -33,6 +33,17 @@
   }
 }
 
+.profile-banner{
+  width: 100%;
+  height: 15%;
+  overflow: hidden;
+
+  img{
+    width: 100%;
+    height: auto;
+  }
+}
+
 .follow-button{
   border-style: solid;
   border-width: 2px;
