Created text fields for profile edit component

--- a/app/assets/stylesheets/13_profile_edit.scss
+++ b/app/assets/stylesheets/13_profile_edit.scss
@@ -16,12 +16,13 @@
   border: 2px solid grey;
 }
 
-.profile-edit-name{
+.profile-edit-row{
+  width: 80%;
+  height: 10%;
+  margin-top: 25px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 0 20px;
-  height: 25%;
 }
 
 .profile-edit-text{
@@ -29,7 +30,53 @@
   flex-direction: column;
   width: 48%;
 
-  input{
-    // height: ;
+  label{
+    margin-bottom: 5px;
+  }
+
+  input, select{
+    height: 100%;
+    font-size: large;
+    padding: 0 5%;
+    border-radius: 8px;
+    border-width: 1px;
+
+    &:focus{
+      outline: none;
+      border: 2.5px solid blue;
+      border-radius: 8px;
+    }
   }
 }
+
+.profile-edit-buttons{
+  font-size: 16px;
+  width: 50%;
+  height: 10%;
+  margin-top: 25px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  align-self: flex-end;
+  margin-right: 50px;
+
+  & *{
+    font-size: inherit;
+    font-weight: bold;
+    cursor: pointer;
+    color: blue;
+  }
+}
+
+.profile-edit-save{
+  appearance: none;
+  border: none;
+  color: white;
+  width: 150px;
+  height: 50px;
+  background-color: blue;
+  border-radius: 50px;
+}
+
+
