--- a/app/assets/stylesheets/10_user_profile.scss
+++ b/app/assets/stylesheets/10_user_profile.scss
@@ -26,9 +26,11 @@
   height: 80px;
   overflow: hidden;
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
 
   img {
-    width: 100%;
+    width: auto;
     height: 100%;
   }
 }
