--- a/app/assets/stylesheets/07_feed.scss
+++ b/app/assets/stylesheets/07_feed.scss
@@ -3,9 +3,7 @@
 .feed-container {
   width: 100%;
   height: 75vh;
-  padding: 0 20px 0 20px;
-  // margin-top: $header-height;
-  // overflow: hidden;
+  margin-top: $header-height;
   background-color: rgb(247, 248, 250);
   display: flex;
   flex-direction: column;
