--- a/app/assets/stylesheets/10_user_profile.scss
+++ b/app/assets/stylesheets/10_user_profile.scss
@@ -4,17 +4,27 @@
   margin-top: $header-height;
   width: 100vw;
   height: 90vh;
-  padding: 5px 1% 0 1%;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+.profile-header{
+  width: 100%;
+  height: 55%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .profile-picture {
-  width: 90px;
-  height: 90px;
-  background-color: blue;
+  position: relative;
+  padding-top: 2.5px;
+  top: -50px;
+  width: 100px;
+  height: 100px;
+  background-color: white;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -22,12 +32,13 @@
 }
 
 .profile-picture-buffer {
-  width: 80px;
-  height: 80px;
+  width: 95px;
+  height: 95px;
   overflow: hidden;
   border-radius: 50%;
   display: flex;
   justify-content: center;
+  align-items: center;
 
   img {
     width: auto;
@@ -37,12 +48,14 @@
 
 .profile-banner{
   width: 100%;
-  height: 15%;
-  overflow: hidden;
+  height: 80%;
+  
 
   img{
+    object-fit: cover;
+    object-position: 50% 40%;
     width: 100%;
-    height: auto;
+    height: 100%;
   }
 }
 
