--- a/app/assets/stylesheets/13_profile_edit.scss
+++ b/app/assets/stylesheets/13_profile_edit.scss
@@ -79,4 +79,36 @@
   border-radius: 50px;
 }
 
+.profile-edit-header-container{
+  height: 10%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 100px 25px 100px;
+  box-shadow: 1px 1px 3px 0.5px rgba(1, 1, 1, 0.2);
 
+  & div{
+    width: 33.3333%;
+  }
+}
+
+.profile-edit-title{
+  text-align: center;
+}
+
+.back-button{
+    margin-left: 25px;
+    background-color: transparent;
+    border: none;
+    height: 50px;
+    width: 50px;
+    cursor: pointer;
+
+    & img{
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+}
