Setup profile header

--- a/app/assets/stylesheets/06_user_info.scss
+++ b/app/assets/stylesheets/06_user_info.scss
@@ -31,8 +31,7 @@
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 8px;
 
-  button,
-  a {
+  div{
     font-size: 13.333px;
     border: none;
     background-color: transparent;
