--- a/app/assets/stylesheets/10_user_profile.scss
+++ b/app/assets/stylesheets/10_user_profile.scss
@@ -1,7 +1,7 @@
 @import "./00_variables.scss";
 
 .user-profile {
-  // margin-top: $header-height;
+  margin-top: $header-height;
   width: 100vw;
   height: 90vh;
   text-align: center;
@@ -10,25 +10,31 @@
   align-items: center;
 }
 
-.profile-header{
+.profile-header {
   width: 100%;
-  height: 40%;
+  height: 100%;
+}
+
+.profile-header-partition {
+  width: 100%;
+  height: 30%;
   display: flex;
   flex-direction: row;
   align-items: center;
 
-  & > div{
+  & > div {
     width: 33.33333%;
     height: 100%;
   }
 
-  & div:nth-child(2){
+  & > div:nth-child(2) {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
   }
 
-  & div:nth-child(3){
+  & > div:nth-child(3) {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -39,8 +45,8 @@
 
 .profile-picture {
   position: relative;
-  padding-top: 1px;
-  top: -50px;
+  padding-top: 3px;
+  top: -25%;
   width: 100px;
   height: 100px;
   background-color: white;
@@ -65,20 +71,24 @@
   }
 }
 
-.profile-banner{
+.profile-banner-container {
   width: 100%;
-  height: 80%;
-  
+  height: 50%;
+}
 
-  img{
+.profile-banner {
+  width: 100%;
+  height: 100%;
+
+  img {
     object-fit: cover;
-    object-position: 50% 40%;
+    // object-position: 50% 40%;
     width: 100%;
     height: 100%;
   }
 }
 
-.profile-body{
+.profile-body {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -90,48 +100,47 @@
   top: -15%;
 }
 
-.profile-options{
+.profile-options {
   float: right;
 }
 
-.profile-edit-button{
+.profile-edit-button {
   display: inline-block;
   width: 35px;
   height: 35px;
 
-  & img{
+  & img {
     width: 100%;
     height: 100%;
   }
 }
 
-.follow-button{
+.follow-button {
   border-style: solid;
   border-width: 2px;
 }
 
-.follow{
-
+.follow {
   background-color: blue;
 
-  &::after{
+  &::after {
     content: "Follow";
   }
 
-  &:hover{
+  &:hover {
     background-color: lighten($color: blue, $amount: 10%);
   }
 }
 
-.following{
+.following {
   background-color: transparent;
 
-  &::after{
+  &::after {
     content: "Following";
     color: grey;
   }
 
-  &:hover::after{
+  &:hover::after {
     content: "Unfollow";
     color: red;
     background-color: grey;
