--- a/app/assets/stylesheets/10a_user_info.scss
+++ b/app/assets/stylesheets/10a_user_info.scss
@@ -1,7 +1,8 @@
 .profile-info{
+  margin-top: -25px;
   display: flex;
   flex-direction: column;
-  width: 35%;
+  width: 100%;
 
   & *{
     margin-bottom: 10px;
@@ -35,4 +36,5 @@
 #profile-description{
   font-family: sans-serif;
   font-weight: 400;
+  height: 60px;
 }
