--- a/app/assets/stylesheets/10_user_profile.scss
+++ b/app/assets/stylesheets/10_user_profile.scss
@@ -30,7 +30,7 @@
   & > div:nth-child(2) {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    // justify-content: center;
     align-items: center;
   }
 
@@ -116,12 +116,17 @@
 }
 
 .follow-button {
+  margin: 0 auto;
   border-style: solid;
   border-width: 2px;
+  border-radius: 50px;
+  width: 25%;
+  height: 30px;
+  font-family: sans-serif;
+  font-weight: bold;
 }
 
 .follow {
-  background-color: blue;
 
   &::after {
     content: "Follow";
@@ -134,16 +139,20 @@
 
 .following {
   background-color: transparent;
+  border-color: blue;
 
   &::after {
     content: "Following";
     color: grey;
   }
 
+  &:hover{
+    background-color: rgba(1, 1, 1, 0.2);
+    border-color: red;
+  }
+
   &:hover::after {
     content: "Unfollow";
     color: red;
-    background-color: grey;
-    border-color: red;
   }
 }
