--- a/app/assets/stylesheets/07_feed.scss
+++ b/app/assets/stylesheets/07_feed.scss
@@ -1,11 +1,16 @@
 @import "./00_variables.scss";
 
-.feed-container {
+.feed {
   width: 100%;
   height: 75vh;
-  margin-top: $header-height;
-  background-color: rgb(247, 248, 250);
+  // margin-top: $header-height;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+
+.masonry-container{
+  width: 100%;
+  background-color: rgb(247, 248, 250);
 }
