--- a/app/assets/stylesheets/09_masonry.scss
+++ b/app/assets/stylesheets/09_masonry.scss
@@ -6,6 +6,7 @@
   // margin-left: -30px; /* gutter size offset */
   width: 95%;
   // padding: 10px
+  background-color: rgb(247, 248, 250);
 }
 .my-masonry-grid_column {
   padding-left: 30px; /* gutter size */
