--- a/app/assets/stylesheets/10_user_profile.scss
+++ b/app/assets/stylesheets/10_user_profile.scss
@@ -1,7 +1,6 @@
 @import "./00_variables.scss";
 
 .user-profile {
-  margin-top: $header-height;
   width: 100vw;
   height: 90vh;
   text-align: center;
@@ -46,7 +45,7 @@
 .profile-picture {
   position: relative;
   padding-top: 3px;
-  top: -25%;
+  top: -50px;
   width: 100px;
   height: 100px;
   background-color: white;
