Setup splash page

--- a/app/assets/stylesheets/09_masonry.scss
+++ b/app/assets/stylesheets/09_masonry.scss
@@ -18,3 +18,9 @@
   background: grey;
   // margin-bottom: 30px;
 }
+
+.masonry-container{
+  width: 100%;
+  padding-top: 10px;
+  background-color: rgb(247, 248, 250);
+}
