--- a/app/assets/stylesheets/14_splash_page.scss
+++ b/app/assets/stylesheets/14_splash_page.scss
@@ -27,13 +27,19 @@
 }
 
 #signup-button {
-  width: 100px;
+  width: 140px;
   height: 60px;
-  padding-top: 17.5px;
+  padding-top: 20px;
   display: block;
   background-color: white;
   color: black;
   font-size: 20px;
+  font-family: Helvetica, sans-serif;
+  font-weight: 600;
   text-align: center;
   border-radius: 50px;
+}
+
+#signup-button:hover{
+  background-color: darken(white, 15%);
 }
