--- a/app/assets/stylesheets/13_profile_edit.scss
+++ b/app/assets/stylesheets/13_profile_edit.scss
@@ -98,16 +98,17 @@
   text-align: center;
 }
 
-.back-button{
+#back-button{
     margin-left: 25px;
+    display: inline-block;
     background-color: transparent;
     border: none;
-    height: 50px;
-    width: 50px;
+    height: 45px;
+    width: 45px;
     cursor: pointer;
 
     & img{
-      object-fit: cover;
+      // object-fit: contain;
       width: 100%;
       height: 100%;
     }
