--- a/app/assets/stylesheets/13_profile_edit.scss
+++ b/app/assets/stylesheets/13_profile_edit.scss
@@ -7,7 +7,7 @@
   align-items: center;
 }
 
-.profile-edit-form{
+.profile-edit-form-container{
   width: 35%;
   height: 90%;
   display: flex;
@@ -86,7 +86,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin: 0 100px 25px 100px;
+  margin: 0 100px 50px 100px;
   box-shadow: 1px 1px 3px 0.5px rgba(1, 1, 1, 0.2);
 
   & div{
@@ -108,7 +108,6 @@
     cursor: pointer;
 
     & img{
-      // object-fit: contain;
       width: 100%;
       height: 100%;
     }
