--- a/app/assets/stylesheets/13_profile_edit.scss
+++ b/app/assets/stylesheets/13_profile_edit.scss
@@ -23,8 +23,7 @@
 }
 
 .profile-edit-form {
-  width: 35%;
-  // height: 90%;
+  width: 40%;
   margin-bottom: 100px;
   display: flex;
   flex-direction: column;
@@ -57,6 +56,40 @@
   }
 }
 
+.profile-banner.edit{
+  & label{
+    position: relative;
+    left: 30%;
+    top: -50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    height: 45px;
+    background-color: white;
+    border: 1px solid blue;
+    color: blue;
+    border-radius: 50px;
+  }
+
+  & label div{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 75%;
+  }
+
+  & label div img{
+    object-fit: contain;
+    width: 10%;
+    height: 100%;
+    margin-right: 2px;
+  }
+}
+
 .profile-picture.edit {
   & label {
     display: flex;
@@ -67,7 +100,7 @@
     height: 38px;
     background-color: white;
     border: 0.5px solid rgba(1, 1, 1, 0.2);
-    -webkit-box-shadow: 6px 5px 11px 0px #000000;
+    -webkit-box-shadow: 1px 1px 11px 0px #000000;
     box-shadow: 1px 1px 11px 0px #000000;
     border-radius: 50px;
     position: absolute;
