--- a/app/assets/stylesheets/13_profile_edit.scss
+++ b/app/assets/stylesheets/13_profile_edit.scss
@@ -56,8 +56,8 @@
   }
 }
 
-.profile-banner.edit{
-  & label{
+.profile-banner.edit {
+  & label {
     position: relative;
     left: 30%;
     top: -50%;
@@ -73,20 +73,23 @@
     border-radius: 50px;
   }
 
-  & label div{
-    display: flex;
+  & label:hover {
+    background-color: darken(white, 10%);
+  }
+}
+
+.camera-icon-container {
+  display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 75%;
-  }
 
-  & label div img{
-    object-fit: contain;
-    width: 10%;
-    height: 100%;
-    margin-right: 2px;
+  & img {
+    height: 80%;
+    width: auto;
+    margin-right: 5px;
   }
 }
 
