Fixed coloring for banner edit button

--- a/app/assets/stylesheets/13_profile_edit.scss
+++ b/app/assets/stylesheets/13_profile_edit.scss
@@ -68,8 +68,8 @@
     width: 40%;
     height: 45px;
     background-color: white;
-    border: 1px solid blue;
-    color: blue;
+    border: 2px solid rgb(64, 111, 205);
+    color: rgb(64, 111, 205);
     border-radius: 50px;
   }
 
