--- a/app/assets/stylesheets/03_header.scss
+++ b/app/assets/stylesheets/03_header.scss
@@ -15,14 +15,32 @@
   box-sizing: border-box;
   background-color: white;
 
+  & *:first-child{
+    margin-left: 2.5%;
+  }
+
   & *:last-child{
     margin-right: 2.5%;
   }
 }
 
 .splash-logo {
-  min-height: 35%;
+  height: 45%;
+  width: 8%;
+}
+
+.logo-link{
+  height: 100%;
   width: 10%;
+
+  & img{
+    height: 100%;
+    width: auto;
+  }
+
+  &:hover svg path{
+    fill: rgb(81, 130, 238);
+  }
 }
 
 #logo_svg {
