--- a/app/assets/stylesheets/13_profile_edit.scss
+++ b/app/assets/stylesheets/13_profile_edit.scss
@@ -16,6 +16,15 @@
   align-items: center;
   margin: 0 100px 50px 100px;
   box-shadow: 1px 1px 3px -1px rgba(1, 1, 1, 0.2);
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  color: rgba(1, 1, 1, 0.8);
+
+  & *{
+    font-family: inherit;
+    font-weight: bold;
+    color: inherit;
+  }
 
   & div {
     width: 33.3333%;
@@ -33,7 +42,7 @@
 
 .profile-edit-form-header {
   width: 100%;
-  height: 22%;
+  height: 15%;
   margin-bottom: 70px;
   display: flex;
   flex-direction: column;
@@ -60,7 +69,7 @@
   & label {
     position: relative;
     left: 30%;
-    top: -50%;
+    top: -70%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -121,7 +130,7 @@
 
 .profile-edit-row {
   width: 80%;
-  height: 10%;
+  height: 8%;
   margin-top: 25px;
   display: flex;
   flex-direction: row;
