--- a/app/assets/stylesheets/10_user_profile.scss
+++ b/app/assets/stylesheets/10_user_profile.scss
@@ -60,11 +60,20 @@
   height: 95px;
   overflow: hidden;
   border-radius: 50%;
+  border: 1px solid gray;
+  box-sizing: border-box;
+
+
   display: flex;
   justify-content: center;
   align-items: center;
 
+  img[src]{
+    display: block;
+  }
+
   img {
+    display: none;
     width: auto;
     height: 100%;
   }
@@ -79,9 +88,13 @@
   width: 100%;
   height: 100%;
 
+  img[src]{
+    display: block;
+  }
+
   img {
+    display: none;
     object-fit: cover;
-    // object-position: 50% 40%;
     width: 100%;
     height: 100%;
   }
