--- a/app/assets/stylesheets/13_profile_edit.scss
+++ b/app/assets/stylesheets/13_profile_edit.scss
@@ -42,11 +42,15 @@
 
 .profile-edit-form-header {
   width: 100%;
-  height: 15%;
-  margin-bottom: 70px;
+  height: 200px;
+  margin-bottom: 50px;
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   align-items: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-y: 30%;
 
   & img {
     object-fit: cover;
@@ -66,10 +70,14 @@
 }
 
 .profile-banner.edit {
+  width: 100%;
+  height: 100%;
+
+
   & label {
     position: relative;
     left: 30%;
-    top: -70%;
+    top: -100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -84,6 +92,11 @@
 
   & label:hover {
     background-color: darken(white, 10%);
+  }
+
+  & > img{
+    width: 100%;
+    height: 150px;
   }
 }
 
@@ -102,7 +115,18 @@
   }
 }
 
-.profile-picture.edit {
+.profile-picture-edit {
+  position: relative;
+  padding-top: 3px;
+  bottom: -50px;
+  width: 100px;
+  height: 100px;
+  background-color: white;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   & label {
     display: flex;
     flex-direction: row;
