--- a/app/assets/stylesheets/13_profile_edit.scss
+++ b/app/assets/stylesheets/13_profile_edit.scss
@@ -20,7 +20,7 @@
   font-weight: 400;
   color: rgba(1, 1, 1, 0.8);
 
-  & *{
+  & * {
     font-family: inherit;
     font-weight: bold;
     color: inherit;
@@ -33,7 +33,9 @@
 
 .profile-edit-form {
   width: 40%;
+  height: 800px;
   margin-bottom: 100px;
+  padding-bottom: 25px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -48,6 +50,7 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
+  border-bottom: 1px solid black;
   background-repeat: no-repeat;
   background-size: cover;
   background-position-y: 30%;
@@ -69,32 +72,24 @@
   }
 }
 
-.profile-banner.edit {
+.banner-upload-button {
   width: 100%;
-  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+  height: 50px;
+  background-color: white;
+  border: 2px solid rgb(64, 111, 205);
+  color: rgb(64, 111, 205);
+  border-radius: 50px;
 
-
-  & label {
-    position: relative;
-    left: 30%;
-    top: -100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 40%;
-    height: 45px;
-    background-color: white;
-    border: 2px solid rgb(64, 111, 205);
-    color: rgb(64, 111, 205);
-    border-radius: 50px;
-  }
-
-  & label:hover {
+  &:hover {
     background-color: darken(white, 10%);
   }
 
-  & > img{
+  & > img {
     width: 100%;
     height: 150px;
   }
@@ -102,11 +97,11 @@
 
 .camera-icon-container {
   display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 75%;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 75%;
 
   & img {
     height: 80%;
@@ -154,7 +149,7 @@
 
 .profile-edit-row {
   width: 80%;
-  height: 8%;
+  height: 10%;
   margin-top: 25px;
   display: flex;
   flex-direction: row;
@@ -176,11 +171,11 @@
     font-size: large;
     padding: 0 5%;
     border-radius: 8px;
-    border-width: 1px;
+    border-width: 1.5px;
 
     &:focus {
       outline: none;
-      border: 2.5px solid blue;
+      border: 1.5px solid blue;
       border-radius: 8px;
     }
   }
