--- a/app/assets/stylesheets/08_image.scss
+++ b/app/assets/stylesheets/08_image.scss
@@ -62,3 +62,14 @@ $border-radius: 4px;
     align-items: center;
   }
 }
+
+.like-button{
+  width: 25px;
+  height: 25px;
+
+  & img{
+    object-fit: cover;
+    width: 100;
+    height: 100%;
+  }
+}
