Conditionally render like button for posts not by current user

--- a/app/assets/stylesheets/03_header.scss
+++ b/app/assets/stylesheets/03_header.scss
@@ -15,11 +15,11 @@
   box-sizing: border-box;
   background-color: white;
 
-  & *:first-child{
+  & > *:first-child{
     margin-left: 2.5%;
   }
 
-  & *:last-child{
+  & > *:last-child{
     margin-right: 2.5%;
   }
 }
