--- a/app/assets/stylesheets/08_image.scss
+++ b/app/assets/stylesheets/08_image.scss
@@ -1,4 +1,5 @@
 $border-radius: 4px;
+$text-color: rgba(255, 255, 255, 0.7);
 
 .image-container {
   position: relative;
@@ -44,7 +45,7 @@ $border-radius: 4px;
   width: 100%;
   background-color: transparent;
   z-index: 1;
-  color: rgba(255, 255, 255, 0.7);
+  color: $text-color;
   border-radius: $border-radius;
 
   .image-hover-top {
@@ -63,6 +64,12 @@ $border-radius: 4px;
   }
 }
 
+.hover-user{
+  &:hover{
+    color: darken($text-color, 25%);
+  }
+}
+
 .like-button{
   width: 25px;
   height: 25px;
@@ -71,5 +78,9 @@ $border-radius: 4px;
     object-fit: cover;
     width: 100;
     height: 100%;
+  }
+
+  &:hover img{
+    filter: brightness((75%));
   }
 }
