--- a/app/assets/stylesheets/12_post_show.scss
+++ b/app/assets/stylesheets/12_post_show.scss
@@ -34,9 +34,12 @@
       font-weight: 400;
       margin-bottom: 10px;
     }
+
+    a{
+      color: $black;
+    }
   }
 }
-
 
 .post-show-navigation{
   position: absolute;
