--- a/app/assets/stylesheets/12_post_show.scss
+++ b/app/assets/stylesheets/12_post_show.scss
@@ -1,23 +1,12 @@
 @import './00_variables.scss';
 
 .post-show {
-  margin-top: $header-height;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  .post-show-gallery {
-    padding: 10px;
-    width: 100%;
-    height: 600px;
-    background-color: rgba(0, 0, 0, 0.8);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  }
 
   img {
     // width: 100%;
@@ -41,15 +30,54 @@
   }
 }
 
-.post-show-navigation{
-  position: absolute;
+.post-show-gallery{
+  position: relative;
   display: flex;
   flex-direction: row;
-  height: 100%;
+  justify-content: center;
+  width: 100%;
+  height: 80%;
+}
 
-  .arrow{
-    display: inline-block;
-    width: 50%;
-    height: 200px;
+.post-show-image{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+  width: auto;
+  margin: auto;
+  text-align: center;
+
+  img{
+    display: block;
+    margin: 0 auto;
+    height: 100%;
+    width: auto;
+    object-fit: contain;
+    z-index: 1;
   }
+}
+
+.post-show-nav{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+}
+
+.post-show-nav-tile{
+  height: 100%;
+  width: 50%;
+  background-color: grey;
+
+  a {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.post-show-nav-button{
+  display: inline-block;
+  width: 100%;
+  height: 100%;
 }
