--- a/app/assets/stylesheets/12_post_show.scss
+++ b/app/assets/stylesheets/12_post_show.scss
@@ -5,7 +5,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 
   img {
@@ -80,4 +80,46 @@
   display: inline-block;
   width: 100%;
   height: 100%;
+}
+
+.post-show-lower{
+  width: 100%;
+  padding: 0 5%;
+}
+
+.post-show-poster-info{
+  width: 25%;
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+#post-show-links{
+  display: inline-block;
+  width: 200px;
+}
+
+#post-show-follow{
+  display: none;
+}
+
+label.following{
+  &::after{
+    content: "Following";
+  }
+
+  &:hover &::after{
+    content: "Unfollow";
+  }
+}
+
+label.folllow{
+  &:after{
+    content: "Follow";
+  }
+
+  &:hover{
+
+  }
 }
