--- a/app/assets/stylesheets/00_variables.scss
+++ b/app/assets/stylesheets/00_variables.scss
@@ -1,5 +1,5 @@
 $header-height: 70px;
 $black: rgba(1, 1, 1, 0.8);
-$gray: #f7f8fa;
+$gray: rgb(247, 248, 250);
 $pxBlue: rgb(81, 130, 238);
 $pxBlueText: rgb(64, 111, 205);
