--- a/app/assets/stylesheets/08_image.scss
+++ b/app/assets/stylesheets/08_image.scss
@@ -5,6 +5,7 @@ $text-color: rgba(255, 255, 255, 0.7);
   position: relative;
   display: flex;
   margin: 2px;
+  cursor: pointer;
 
   a{
     line-height: 0;
@@ -26,7 +27,7 @@ $text-color: rgba(255, 255, 255, 0.7);
     }
   }
 
-  img {
+  & > img {
     width: 100%;
     height: auto;
     border-radius: $border-radius;
@@ -71,16 +72,30 @@ $text-color: rgba(255, 255, 255, 0.7);
 }
 
 .like-button{
-  width: 25px;
-  height: 25px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 
   & img{
-    object-fit: cover;
-    width: 100;
-    height: 100%;
+    object-fit: contain;
+    width: 84%;
+    height: 85%;
   }
 
-  &:hover img{
-    filter: brightness((75%));
+  &:hover{
+    background-color: rgba(0, 0, 0, 0.3);
   }
+}
+
+
+.white:hover{
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.black:hover{
+  background-color: rgba(0, 0, 0, 0.3);
 }
