--- a/app/assets/stylesheets/03_header.scss
+++ b/app/assets/stylesheets/03_header.scss
@@ -5,7 +5,8 @@
   top: 0;
   height: $header-height;
   width: 100%;
-  padding: 5px 1% 0 1%;
+  margin-left: 2.6%;
+  margin-right: 2.6%;
   text-align: center;
   display: flex;
   flex-direction: row;
