--- a/app/assets/stylesheets/13_profile_edit.scss
+++ b/app/assets/stylesheets/13_profile_edit.scss
@@ -181,6 +181,23 @@
   }
 }
 
+.profile-edit-description{
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  height: 10%;
+  margin-top: 25px;
+
+  & > label{
+    align-self: flex-start;
+  }
+
+  & > textarea{
+    width: 100%;
+    max-width: 100%;
+  }
+}
+
 .profile-edit-buttons {
   font-size: 16px;
   width: 50%;
