--- a/app/assets/stylesheets/12_post_show.scss
+++ b/app/assets/stylesheets/12_post_show.scss
@@ -100,12 +100,31 @@
 .post-show-lower {
 }
 
+.post-show-info{
+  display: flex;
+  flex-direction: row;
+  height: 60px;
+  width: 100%;
+}
+
 .post-show-poster-info {
   width: 25%;
-  height: 80px;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-evenly;
+}
+
+.post-show-user-picture{
+  height: 100%;
+  width: auto;
+  border-radius: 50px;
+  overflow: hidden;
+
+  img{
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .post-show-interactions {
