Specified px width/height for post show picture

--- a/app/assets/stylesheets/12_post_show.scss
+++ b/app/assets/stylesheets/12_post_show.scss
@@ -120,8 +120,8 @@
 }
 
 .post-show-user-picture{
-  height: 100%;
-  width: auto;
+  height: 60px;
+  width: 60px;
   border-radius: 50px;
   overflow: hidden;
   margin-right: 15px;
