Explicitly set color for User link on post-show-info

--- a/app/assets/stylesheets/12_post_show.scss
+++ b/app/assets/stylesheets/12_post_show.scss
@@ -139,6 +139,14 @@
 #post-show-links {
   display: inline-block;
   width: 200px;
+
+  a{
+    color: black;
+  }
+
+  a:visited{
+    color: black;
+  }
 }
 
 #post-show-follow {
