Added padding to profile-lower

--- a/app/assets/stylesheets/10_user_profile.scss
+++ b/app/assets/stylesheets/10_user_profile.scss
@@ -145,6 +145,10 @@
   border-bottom: 2px solid $pxBlueText;
 }
 
+.profile-lower{
+  padding-bottom: 25px;
+}
+
 .follow-button {
   margin: 0 auto;
   border-style: solid;
