--- a/app/assets/stylesheets/17_user_list.scss
+++ b/app/assets/stylesheets/17_user_list.scss
@@ -12,6 +12,7 @@
   justify-content: space-evenly;
   align-items: center;
   text-align: center;
+  margin-bottom: 15px;
 
   > div {
     width: 33.333333%;
