Fixing meta tags

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <meta name="description" content="A photography sharing website for users to
     like images and follow others." />
     <meta name="title" property="og:title" content="500px" />
-    <meta name="image" property="og:image" content="https://raw.githubusercontent.com/yunasty/pxClone/main/screenshots/home.png" />
+    <meta name="image" property="og:image" content="<%= asset_path("home.png") %>" />
     <meta name="description" property="og:description" content="A photography sharing website for users to
     like images and follow others." />
 
